automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -80,7 +80,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df= boston_features\n",
+    "boston_cont = df[df.columns.drop(list(df.filter(regex='TAX')))]\n",
+    "boston_cont = boston_cont[boston_cont.columns.drop(list(boston_cont.filter(regex='RAD')))]\n",
+    "boston_cont= boston_cont.drop(['CHAS'], axis=1)\n",
+    "\n",
+    "boston_cont.hist(figsize  = [8, 8]);"
+   ]
   },
   {
    "cell_type": "markdown",
