automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -109,12 +109,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df= boston_features\n",
-    "boston_cont = df[df.columns.drop(list(df.filter(regex='TAX')))]\n",
-    "boston_cont = boston_cont[boston_cont.columns.drop(list(boston_cont.filter(regex='RAD')))]\n",
-    "boston_cont= boston_cont.drop(['CHAS'], axis=1)\n",
+    "import numpy as np\n",
     "\n",
-    "boston_cont.hist(figsize  = [8, 8]);"
+    "boston_log = pd.DataFrame([])\n",
+    "boston_log['AGE'] = np.log(boston_cont['AGE'])\n",
+    "boston_log['B'] = np.log(boston_cont['B'])\n",
+    "boston_log['CRIM'] = np.log(boston_cont['CRIM'])\n",
+    "boston_log['DIS'] = np.log(boston_cont['DIS'])\n",
+    "boston_log['INDUS'] = np.log(boston_cont['INDUS'])\n",
+    "boston_log['LSTAT'] = np.log(boston_cont['LSTAT'])\n",
+    "boston_log['PTRATIO'] = np.log(boston_cont['PTRATIO'])\n",
+    "boston_log['ZN'] = np.log(boston_cont['ZN'])\n",
+    "boston_log.hist(figsize  = [6, 6]);"
    ]
   },
   {
