automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -149,7 +149,40 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# dropped ZN - cumbersome to work with and don't know enough transformations yet\n",
+    "\n",
+    "rm = boston_cont['RM'] # this was already well distributed \n",
+    "age = boston_cont['AGE']\n",
+    "b = boston_cont['B']\n",
+    "# kept age and b non-log because the log transformation did not improve skewness\n",
+    "logcrim = boston_log[\"CRIM\"] \n",
+    "logdis = boston_log[\"DIS\"]  \n",
+    "logindus = boston_log[\"INDUS\"] \n",
+    "loglstat = boston_log[\"LSTAT\"]\n",
+    "logptratio = boston_log[\"PTRATIO\"]\n",
+    "\n",
+    "\n",
+    "scaled_rm = (rm-min(rm))/(max(rm)-min(rm)) # min-max\n",
+    "scaled_age = (age-np.mean(age))/(max(age)-min(age)) # mean norm\n",
+    "scaled_b = (b-min(b))/(max(b)-min(b)) # min-max\n",
+    "scaled_crim = (logcrim-min(logcrim))/(max(logcrim)-min(logcrim)) # min-max\n",
+    "scaled_dis = (logdis-np.mean(logdis))/np.sqrt(np.var(logdis)) # standardization\n",
+    "scaled_indus = (logindus-np.mean(logindus))/np.sqrt(np.var(logindus)) # standardization\n",
+    "scaled_lstat = (loglstat-np.mean(loglstat))/(max(loglstat)-min(loglstat)) # mean norm\n",
+    "scaled_ptratio = (logptratio-min(logptratio))/(max(logptratio)-min(logptratio)) # min-max\n",
+    "\n",
+    "features_final = pd.DataFrame([])\n",
+    "features_final['RM'] = scaled_rm\n",
+    "features_final['AGE'] = scaled_age\n",
+    "features_final['B'] = scaled_b\n",
+    "features_final['CRIM'] = scaled_crim\n",
+    "features_final['DIS'] = scaled_dis\n",
+    "features_final['INDUS'] = scaled_indus\n",
+    "features_final['LSTAT'] = scaled_lstat\n",
+    "features_final['PTRATIO'] = scaled_ptratio\n",
+    "features_final.hist(figsize  = [8, 8]);"
+   ]
   },
   {
    "cell_type": "markdown",
